--- a/index.html
+++ b/index.html
@@ -8,8 +8,44 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    
-
-    
+    <main>
+        <nav>
+            <div class="nav">
+            <p>
+            <a class="f1" href="index.html">Fromulario 1</a>
+            <a class="f2" href="formulario2.html">Formulario 2</a>
+            <a class="f3" href="formulario3.html">Formulario 3</a>
+            </div>
+        </p>
+        </nav>
+        <section>
+            <h3>Accede a tu Área Clientes</h3>
+        <div class="div1">
+            <form action="ejemplo.php">
+                <p>Elije tu documento
+                    <br>
+                    <input type="radio" name="documento" id="dni"> DNI o tarjeta de residencia
+                    <br>
+                    <input type="radio" name="documento" id="pasaporte"> Pasaporte
+                </p>
+                <p>Número de documento
+                    <br>
+                    <input type="text" name="DNI" id="DNI" placeholder="DNI o tarjeta de residencia">
+                </p>
+                <p>Fecha de nacimiento
+                    <br>
+                    <input type="date" name="date" id="date">
+                </p>
+                <input type="checkbox" name="recordar" id="recordar">
+                <label for="recordar">Recordar</label>
+                <p>
+                    <input class="submit" type="submit" value="Entrar">
+                </p>
+            </form>
+            <p>> Acceder con DNI electrónico</p>
+            <p>> Más información sobre seguridad</p>
+        </div>
+        </section>
+    </main>
 </body>
 </html>
