--- a/formulario2.html
+++ b/formulario2.html
@@ -12,7 +12,7 @@
         <nav>
             <div class="nav">
             <p>
-            <a class="f1" href="index.html">Fromulario 1</a>
+            <a class="f1" href="index.html">Formulario 1</a>
             <a class="f2" href="formulario2.html">Formulario 2</a>
             <a class="f3" href="formulario3.html">Formulario 3</a>
             </div>
